base/envoy-gateway/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: pelindung-bumi-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: pelindung-bumi
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: placeholder.example.com
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: placeholder.example.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard-tls
            namespace: envoy-gateway-system
    - name: tcp-postgres
      protocol: TCP
      port: 5432
      allowedRoutes:
        namespaces:
          from: All
